Add GitRepository