@@ -4,30 +4,90 @@ import static org.junit.jupiter.api.Assertions.*;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.URL;
 import java.nio.file.*;
+import java.util.Comparator;
 
-import org.junit.jupiter.api.AfterAll;
+import org.eclipse.jgit.api.errors.GitAPIException;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+
+// Should target be the parent directory?
 
 class GitRepositoryTest {
 
     final static String TEST_REPO_URL = "https://github.com/ikristola/matrixer-test";
-    final static Path TARGET_DIR = Paths.get("/tmp/matrixer-test");
+    final static String TMP_DIR = System.getProperty("java.io.tmpdir");
+    final static Path TARGET_DIR = Path.of(TMP_DIR, File.separator, "matrixer-test");
 
-    @AfterAll
-    static void cleanUp() {
-        try {
-            Files.deleteIfExists(TARGET_DIR);
-        } catch (IOException e) {
-            System.err.println("Cleanup: Error: Could not remove '" + TARGET_DIR + "'");
-        }
+    @BeforeEach
+    void cleanUp() {
+        removeDirectory(TARGET_DIR);
     }
 
     @Test
-    void firstTest() {
-        File target = TARGET_DIR.toFile();
-        GitRepository.clone(TEST_REPO_URL, target);
-        // assertTrue(target.exists());
+    void throwsExceptionIfTargetAlreadyExists() {
+        createDirectory(TARGET_DIR);
+        File target = temporaryTargetFile();
+        assertThrows(Exception.class, () -> GitRepository.clone(TEST_REPO_URL, target));
+    }
+
+    @Test
+    void downloadsRepositoryIfURLisValid() {
+        File target = temporaryTargetFile();
+        assertDoesNotThrow(() -> GitRepository.clone(TEST_REPO_URL, target));
+        assertTrue(directoryContainsFile(target, ".git"));
+    }
+
+    @Test
+    void throwsExceptionIfURLIsNotAGitRepository() {
+        File target = temporaryTargetFile();
+        assertThrows(GitAPIException.class, () -> GitRepository.clone("localhost", target));
+    }
+
+    @Test
+    void canCloneLocalGitRepository() {
+        File target = temporaryTargetFile();
+        String projectDir = projectDirectory().toString();
+        assertDoesNotThrow(() -> GitRepository.clone(projectDir, target));
+        assertTrue(directoryContainsFile(target, ".git"));
+    }
+
+    @Test
+    void throwsExceptionIfLocalPathIsNotAGitDirectory() {
+        File target = temporaryTargetFile();
+        assertThrows(GitAPIException.class, () -> GitRepository.clone(TMP_DIR, target));
+    }
+
+    File projectDirectory() {
+        return new File(System.getProperty("user.dir")).getParentFile();
+    }
+
+    File temporaryTargetFile() {
+        return TARGET_DIR.toFile();
+    }
+
+    private void createDirectory(Path dir) {
+        try {
+            Files.createDirectories(dir);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    private boolean directoryContainsFile(File dir, String fname) {
+        return new File(dir, fname).exists();
+    }
+
+    private void removeDirectory(Path dir) {
+        try {
+            if (dir.toFile().exists()) {
+                Files.walk(dir)
+                        .sorted(Comparator.reverseOrder())
+                        .map(Path::toFile)
+                        .forEach(File::delete);
+            }
+        } catch (IOException e) {
+            throw new RuntimeException("Clean up: Failed to remove dir: " + e.getMessage());
+        }
     }
 }
